--- a/index.html
+++ b/index.html
@@ -413,9 +413,9 @@ Die ersten Spielgeräte sind auch schon eingesetzt. Die Kinder warten auf den Re
 Lassen Sie uns die Welt als Spielplatz für Kinder im idyllischen Areal des Treptower Park errichten. Ein Ausflugsort innerhalb der großen Stadt für die ganze Familie, mit Restaurants, Bootsverleih, großen Wiesen und Wasser. Und wenn die Dämmerung anbricht beginnt das schönste Abendkonzert von Berlin, vorgtragen von der größten Nachtigallenpopulation der Stadt.<br>
 Der Treptower Park, eine kleine, heile Welt in Berlin.<br>
 Der Weltspielplatz, eine kleine, heile Welt im Treptower Park.
-<br><br>
-Wir haben eine Spendenseite bei <a href="https://www.startnext.com/weltspielplatz" target="_blank" title="StartNext">Startnext</a> eingerichtet. <!--, eine Fundraising Seite die schon vielen NPOs geholfen hat, Gelder für gemeinnützige Projekte zu sammeln.--> Sie können ohne sich zu registrieren spenden und erhalten eine Spendenquittung.
-<br><br>
+<br><br><!--,
+Wir haben eine Spendenseite bei <a href="https://www.startnext.com/weltspielplatz" target="_blank" title="StartNext">Startnext</a> eingerichtet.  eine Fundraising Seite die schon vielen NPOs geholfen hat, Gelder für gemeinnützige Projekte zu sammeln. Sie können ohne sich zu registrieren spenden und erhalten eine Spendenquittung.
+<br><br>-->
 Wir suchen auch nach Sponsoren, die ein ganzes Spielgerät bezahlen wollen. Warum nicht einen Milchproduzenten den Käse in Europa finanzieren lassen?
 </p>
 		</div>
@@ -450,10 +450,10 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
 
     <div class="col-md-6">
 			<p class="oc">
-        Bezirksamt Treptow-Köpenick <br>
-        IBAN: DE55100500001613013228 <br>
-        BIC: BELADEBEXXX <br>
-        Verwendungszweck: Weltspielplatz 1239000006535 <br>
+        <strong>Empfänger: </strong>Bezirksamt Treptow-Köpenick <br>
+        <strong>IBAN: </strong>DE55100500001613013228 <br>
+        <strong>BIC: </strong>BELADEBEXXX <br>
+        <strong>Verwendungszweck: </strong>Weltspielplatz 1239000006535 <br>
         <br>Sie finden die Kontodaten auch auf unserer <a target="_blank"  href="http://www.berlin.de/ba-treptow-koepenick/politik-und-verwaltung/aemter/strassen-und-gruenflaechenamt/gruen/weltspielplatz/artikel.58267.php">Berlin.de</a> Seite.
         </p>
 		</div>
@@ -466,8 +466,10 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
 
 
 
-			<p class="oc"><strong>Ansprechpartnerin: </strong>Frau Dr. Lehmann<br><strong>Tel.: </strong>(030) 90297 – 5823</p>
-
+			<p class="oc"><strong>Ansprechpartnerin: </strong>Frau Dr. Lehmann<br><strong>Tel.: </strong>(030) 90297 – 5823
+        <br>
+      <strong>E-Mail, für Spendenquittung: </strong><a href="javascript:linkTo_UnCryptMailto('nbjmup;jogpAxfmutqjfmqmbu{/ef');">info[ät]weltspielplatz[punkt]de</a>
+      </p>
 		</div>
 	</div>
 
