--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	<div class="row zeile4" style="">
 
 		<div class="col-xs-12 col-sm-6 videos">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/OFdqumBi8lA?rel=0" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/WxDhqHM3Mzk?list=PLLkg5Ij9LT3caIyhkQfKqt_NAM9A6CzAE" frameborder="0" allowfullscreen></iframe>
 		</div>
     <div class="col-sm-6 col-xs-12 intro">
 			<div class="block height-x2 text">
