--- a/index.html
+++ b/index.html
@@ -7,19 +7,14 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel='stylesheet' id='stylesheet-weltspielplatz'  href='./css/custom-style.css' type='text/css' media='all' />
 <link href="css/ticker-style.css" rel="stylesheet" type="text/css" />
-<link rel='stylesheet' id='animatecss'  href='//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css' type='text/css' media='all' />
+<link rel='stylesheet' id='animatecss'  href='http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css' type='text/css' media='all' />
 
 <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.png" type="image/png" />
 
-<script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
-<script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
 <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
-<script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/jquery_lazyload/1.9.5/jquery.lazyload.min.js'></script>
-<script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js'></script>
-<script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/fitvids/1.1.0/jquery.fitvids.min.js'></script>
-<script type="text/javascript" src="js/jquery.ticker.js"></script>
-<script type="text/javascript" src="js/scripts.js"></script>
+<!--<script type="text/javascript" src="js/jquery.ticker.js"></script>-->
+<script type="text/javascript" data-main="js/main" src="js/require.js"></script>
 
 <script type="text/javascript">
 <!--
@@ -74,76 +69,11 @@
             </div>
         </div>
     </nav>
-	<!-- <div class="row zeile1">
-		<div class="col-sm-4 intro">
-			<div class="block rot text">
-				<h2>Von den kreativsten Köpfen unserer Erde erdacht:<br><strong>begeisterte Kinder</strong></h2>
-			</div>
-		</div>
-		<div class="col-sm-4 intro">
-			<div class="block orange logo">
-				<img class="img-responsive" src="images/logo.svg" alt="Logo">
-			</div>
-		</div>
-		<div class="col-sm-4 hidden-xs intro">
-			<div class="block bild">
-				<a class="popBig" href="images/karte01-A.jpg"><img class="img-responsive" src="images/karte01-V.jpg" alt="Skizze Weltspielplatz"></a>
-			</div>
-		</div>
-	</div>
-
-	<div class="row zeile2">
-		<div class="col-sm-4 col-xs-6 intro">
-			<div class="block bild">
-				<a class="popBig" href="images/giraffe2-A.jpg"><img class="img-responsive" src="images/giraffe2-V.jpg" alt="Workshop mit Giraffe"></a>
-			</div>
-		</div>
-		<div class="col-sm-4 col-xs-6 visible-xs intro">
-			<div class="block bild">
-				<a class="popBig" href="images/computer-A.jpg"><img class="img-responsive" src="images/computer-V.jpg" alt="Am Computer ausarbeiten"></a>
-			</div>
-		</div>
-		<div class="col-sm-4 col-xs-12 intro">
-			<div class="block gruen text">
-				<h2><strong>Extra groß, Traumlage, phantasievoll und für alle:</strong><br>
-Wenn Kinder Spielplätze entwerfen.</h2>
-			</div>
-		</div>
-		<div class="col-sm-4 col-xs-6 intro">
-			<div class="block bild">
-				<a class="popBig" href="images/kaese-A.jpg"><img class="img-responsive" src="images/kaese-V.jpg" alt="Käse für Europa"></a>
-			</div>
-		</div>
-		<div class="col-sm-4 col-xs-6 visible-xs intro">
-			<div class="block bild">
-				<a class="popBig" href="images/arktis-A.jpg"><img class="img-responsive" src="images/arktis-V.jpg" alt="Arktis Entwürfe"></a>
-			</div>
-		</div>
-	</div>
-
-	<div class="row zeile3">
-		<div class="col-sm-4 hidden-xs intro">
-			<div class="block bild">
-				<a class="popBig" href="images/arktis-A.jpg"><img class="img-responsive" src="images/arktis-V.jpg" alt="Arktis Entwürfe"></a>
-			</div>
-		</div>
-		<div class="col-sm-4 hidden-xs intro">
-			<div class="block bild">
-				<a class="popBig" href="images/computer-A.jpg"><img class="img-responsive" src="images/computer-V.jpg" alt="Am Computer ausarbeiten"></a>
-			</div>
-		</div>
-		<div class="col-sm-4 intro">
-			<div class="block tuerkis text">
-				<h2>Was ist besser als ein kleiner Kinderspielplatz?<br>
-<strong>Ein großer Kinderspielplatz.</strong></h2>
-			</div>
-		</div>
-	</div> -->
 
 	<div class="row zeile4" style="">
 
 		<div class="col-xs-12 col-sm-6 videos">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/WxDhqHM3Mzk?list=PLLkg5Ij9LT3caIyhkQfKqt_NAM9A6CzAE" frameborder="0" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/WxDhqHM3Mzk?list=PLLkg5Ij9LT3caIyhkQfKqt_NAM9A6CzAE" frameborder="0" allowfullscreen></iframe>
 		</div>
     <div class="col-sm-6 col-xs-12 intro">
 			<div class="block height-x2 text">
@@ -186,9 +116,6 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/nordamerikaV.jpg" alt="Nord-Amerika Wolkenkratzer">
-						</div>
-						<div class="back">
-							<img class="img-responsive lazy" data-original="images/entwurf/nord-amerika.jpg" alt="Nord-Amerika Wolkenkratzer">
 						</div>
 					</div>
 			</div>
@@ -506,14 +433,14 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//analyse.fait.de/";
+    var u="http://analyse.fait.de/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', 2]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//analyse.fait.de/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="http://analyse.fait.de/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 </body>
 </html>
