--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <li class="hidden">Menü</li>
                         <li><a href="#start">Start</a></li>
                         <li><a href="#planung">Planung</a></li>
-                        <li><a href="#paedagogik">Pädagoik</a></li>
+                        <li><a href="#paedagogik">Pädagogik</a></li>
                         <li><a href="#panorama">Panorama</a></li>
                         <li><a href="#umsetzung">Umsetzung</a></li>
                         <li><a href="#engagement">Engagement</a></li>
