--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="col-sm-6 col-xs-12 intro">
 			<div class="block height-x2 text">
 				<h2>Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des
-MyTheo e.V.</h2><p>Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen. Gemeinsam
+<a href="http://mytheo.de" target="_blank" title="MyTheo e.V.">MyTheo e.V.</a></h2><p>Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen. Gemeinsam
 wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen einreißen und dafür sorgen, dass Kinder einen Ort haben, an dem sie miteinander aufwachsen und Spaß haben, egal woher sie kommen.</p>
 			</div>
 		</div>
