--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<meta name="description" content="Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des My Theo e.V. Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen.">
+<meta name="description" content="Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des MyTheo e.V. Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen.">
 <meta name="viewport" content="width=768, user-scalable=yes, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel='stylesheet' id='stylesheet-weltspielplatz'  href='./css/custom-style.css' type='text/css' media='all' />
@@ -53,7 +53,7 @@
                         <li class="hidden">Menü</li>
                         <li><a href="#start">Start</a></li>
                         <li><a href="#planung">Planung</a></li>
-                        <li><a href="#paedagogik">Pädagogik</a></li>
+                        <li><a href="#paedagogik">Pädagoik</a></li>
                         <li><a href="#panorama">Panorama</a></li>
                         <li><a href="#umsetzung">Umsetzung</a></li>
                         <li><a href="#engagement">Engagement</a></li>
@@ -77,7 +77,8 @@
 		</div>
     <div class="col-sm-6 col-xs-12 intro">
 			<div class="block height-x2 text">
-				<h2>Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des  <a href="http://mytheo.de" target="_blank" title="Mytheo Website">MyTheo e.V.</a></h2><p>Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen. Gemeinsam
+				<h2>Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des
+MyTheo e.V.</h2><p>Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen. Gemeinsam
 wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen einreißen und dafür sorgen, dass Kinder einen Ort haben, an dem sie miteinander aufwachsen und Spaß haben, egal woher sie kommen.</p>
 			</div>
 		</div>
@@ -86,20 +87,9 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
 <div class="row termine fliesstext">
   <div class="col-xs-12" style="">
 
-  </div>
-</div>
 
-<div class="row news fliesstext">
-  <div class="col-xs-12" style="">
-		<img src="images/news/baubeginn2017-c.jpg" class="lazy img-responsive" alt="Baubeginn 2017" />
-		<h1 class="text-center">Neues Geld für den Weltspielplatz</h1>
-			<p>Das Straßen- und Grünflächenamt Treptow-Köpenick hat u.a. Fördermittel beim Berliner Programm für Nachhaltige Entwicklung für den Ausbau des Weltspielplatzes akquiriert. Das ermöglicht die Fortsetzung des Einbaus weiterer Spielgeräte.</br>
-			Schon im Spätsommer 2017 könnte der Bau diverser Spielgeräte beginnen.</br></br>
-			Ganz oben auf der Liste stehen die Wolkenkratzer auf dem nordamerikanischen Kontinent. Auch die Rocky Mountains und die Anden, die beiden großen Klettergebirge, die sich vom nord- zum südamerikanischen Kontinent spannen werden, können mit den neuen Geldern errichtet werden. Mit der Fertigstellung der Anden und den dazugehörigen Fallschutzbelägen kann die Bebauung des südamerikanischen Kontinents abgeschlossen werden.</br></br>
-			In Europa können wir uns auf das lang ersehnte, übergroße Käsestück zum Klettern und Durchrutschen freuen. Außerdem wird auf dem Nordpol ein überdachter Treffpunkt für Eltern und Kinder entstehen. Er wird auf einer kleinen Anhöhe mit einem Durchmesser von ca. 10m errichtet. Dieses übergroße Sitzmöbel soll sich zum Ort der Begegnung und zum Mittelpunkt für Kommunikation innerhalb des Weltspielplatzes entwickeln.</br>
-			Um symbolisch von einem Kontinent zum nächsten zu reisen, werden auch die Transportmittel Schiff, Einbaum und Flugzeug im nächsten Jahr hinzukommen.</br></br>
-			Die Vorbereitungen für diesen neuen Bauabschnitt haben bereits begonnen, so dass wir mit der Fertigstellung der neuen Spielgeräte im Jahr 2017 rechnen können. Wir halten euch weiterhin auf dem Laufenden!</p>
   </div>
+
 </div>
 
 	<div class="row kontinente fliesstext" id="planung">
@@ -126,9 +116,6 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/nordamerikaV.jpg" alt="Nord-Amerika Wolkenkratzer">
-						</div>
-						<div class="back">
-							<img class="img-responsive lazy" data-original="images/nordamerika-back.jpg" alt="Süd Amerika Fussballfeld">
 						</div>
 					</div>
 			</div>
@@ -157,7 +144,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 							<img class="img-responsive lazy" data-original="images/suedamerikaV.jpg" alt="Süd Amerika Fussballfeld">
 						</div>
 						<div class="back">
-							<img class="img-responsive lazy" data-original="images/suedamerika-back.jpg" alt="Süd Amerika Anden">
+							<img class="img-responsive lazy" data-original="images/entwurf/sued-amerika.jpg" alt="Süd Amerika Fussballfeld">
 						</div>
 					</div>
 				</div>
@@ -173,7 +160,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 							<img class="img-responsive lazy" data-original="images/ayersrockV.jpg" alt="Fledermausschaukel in Australien">
 						</div>
 						<div class="back">
-							<img class="img-responsive lazy" data-original="images/australien-back.jpg" alt="Kletterfelsen Uluru">
+							<img class="img-responsive lazy" data-original="images/entwurf/australien.jpg" alt="Fledermausschaukel in Australien">
 						</div>
 					</div>
 				</div>
@@ -201,7 +188,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 							<img class="img-responsive lazy" data-original="images/afrikaV.jpg" alt="Giraffe frisst in Afrika">
 						</div>
 						<div class="back">
-							<img class="img-responsive lazy" data-original="images/giraffe-back.jpg" alt="Giraffe frisst in Afrika">
+							<img class="img-responsive lazy" data-original="images/entwurf/afrika.jpg" alt="Giraffe frisst in Afrika">
 						</div>
 					</div>
 				</div>
@@ -217,7 +204,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 							<img class="img-responsive lazy" data-original="images/chinesischemauerV.jpg" alt="Chinesische Mauer in Asien">
 						</div>
 						<div class="back">
-							<img class="img-responsive lazy" data-original="images/asien-back.jpg" alt="Chinesische Mauer">
+							<img class="img-responsive lazy" data-original="images/entwurf/asien.jpg" alt="Asiatischer Dschungel">
 						</div>
 					</div>
 				</div>
@@ -246,7 +233,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 							<img class="img-responsive lazy" data-original="images/arktisV.jpg" alt="Arktis und Antarktis">
 						</div>
 						<div class="back">
-							<img class="img-responsive lazy" data-original="images/arktis-back.jpg" alt="Forscherstation am Nordpol">
+							<img class="img-responsive lazy" data-original="images/entwurf/nordpol.jpg" alt="Forscherstation am Nordpol">
 						</div>
 					</div>
 				</div>
@@ -262,7 +249,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 							<img class="img-responsive lazy" data-original="images/kaeseV.jpg" alt="Käse in Europa">
 						</div>
 						<div class="back">
-							<img class="img-responsive lazy" data-original="images/kaese-back.jpg" alt="Käse in Europa">
+							<img class="img-responsive lazy" data-original="images/entwurf/europa.jpg" alt="Käse in Europa">
 						</div>
 					</div>
 				</div>
