--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
       </div>
       <div class="col-sm-12 text-container">
         <h2>{{news.titel}}</h2>
-        <p class="" v-html="news.inhalt"></p>
+        <p class=""><span v-html="news.inhalt"></span><span v-html="news.projektinfo"></span></p>
       </div>
     </div>
   </div>
