--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
 <!--<script type="text/javascript" src="js/jquery.ticker.js"></script>-->
-<script type="text/javascript" data-main="js/main" src="js/require.js"></script>
+<script type="text/javascript" data-main="js/main" src="js/require.js?x=1"></script>
 
 <script type="text/javascript">
 <!--
