--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
           <li>Anden</li>
           <li>Fußballfeld mit Ballfang- und Torelementen</li>
         </ul>
+        <h2>Australien</h2>
+  			<ul>
+          <li>Fledermausschaukel</li>
+        </ul>
       </div>
       <div class="col-xs-4 checklist">
 
@@ -180,6 +184,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
         <h2>Asien</h2>
   			<ul>
           <li>Seilbahn</li>
+          <li>Tigerrutsche</li>
         </ul>
 
       </div>
