NEW: Australien etc. fertig

--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
         <h2>Australien</h2>
   			<ul>
           <li>Fledermausschaukel</li>
+          <li>Ayers Rock (Uluru)</li>
+          <li>Wombat</li>
         </ul>
       </div>
       <div class="col-xs-4 checklist">
@@ -185,6 +187,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
   			<ul>
           <li>Seilbahn</li>
           <li>Tigerrutsche</li>
+          <li>Dschungelparkour</li>
         </ul>
 
       </div>
